# card-generator

./: com.github.jleonardfl.CardGenerator.json  meson.build
data/: com.github.jleonardfl.CardGenerator.appdata.xml.in  com.github.jleonardfl.CardGenerator.desktop.in  com.github.jleonardfl.CardGenerator.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: card-generator.in  card-getter.py  card_generator.gresource.xml  main.py  meson.build  window.py  window.ui
